[package]
name = "invinembededicon"
version = "0.1.0"
edition = "2021"

[dependencies]
ksni = { version = "0.2.0", optional = true }
libappindicator = { version = "0.9", optional = true } # Tray icon
gtk = { version = "0.18", optional = true }
png = "0.17.13"

[features]
ksni = ["dep:ksni"]
libappindicator = ["dep:libappindicator", "dep:gtk"]


[profile.release]
strip = true
opt-level = "z"
lto = true
incremental = false
codegen-units = 1
panic = "abort"

